# artifacts/api-server/src/routes/index.ts
@@ -7,6 +7,8 @@ import subscriptionsRouter from "./subscriptions";
 import proxiesRouter from "./proxies";
 import usageRouter from "./usage";
 import adminRouter from "./admin";
+import cartRouter from "./cart";
+import purchaseRouter from "./purchase";
 
 const router: IRouter = Router();
 
@@ -18,5 +20,7 @@ router.use(subscriptionsRouter);
 router.use(proxiesRouter);
 router.use(usageRouter);
 router.use(adminRouter);
+router.use(cartRouter);
+router.use(purchaseRouter);
 
 export default router;
